new spiece  has been added

--- a/wiki-page.html
+++ b/wiki-page.html
@@ -13,10 +13,10 @@ The brown bear (Ursus arctos) is native to parts of northern Eurasia and North A
 <p>Here are some bear species </p>
 <br>
 <ul>
-    <li>Arctos</li>
-    <li>collarus</li>
-    <li>Horribilis</li>
-    <li>Nelsoni(extinct)</li>
+    <li>Brown bear</li>
+    <li>Spectacled bear</li>
+    <li>Asian black bear</li>
+    <li>American black bear</li>
   </ul>
   <br>
   <p>The following countries have the largest populations of brown bears:</p>
