--- a/to-do-list.html
+++ b/to-do-list.html
@@ -10,12 +10,12 @@
     <h1>Today's to  do list </h1>
     <p>Monday , September 19th</p>
     <ol>
-     <li>Write a blog post</li>
-     <li>Go to the bank</li>
-     <li>Study for exams</li>
-     <li>Renew web hosting accouunt and domain name</li>
-     <li>learn something new </li>
-     <li>Update project log </li>
+     <li>Write a the home work</li>
+     <li>Go to the college</li>
+     <li>Study for quizes</li>
+     <li>Renew subscributions </li>
+     <li>go for a swim</li>
+     <li>work on project log </li>
     </ol>
   </div>
 
