new information has been updated

--- a/wiki-page.html
+++ b/wiki-page.html
@@ -19,12 +19,12 @@ The brown bear (Ursus arctos) is native to parts of northern Eurasia and North A
     <li>American black bear</li>
   </ul>
   <br>
-  <p>The following countries have the largest populations of brown bears:</p>
+  <p>The following countries have the smallest populations of brown bears:</p>
   <br>
   <ol>
-    <li>Russia</li>
-    <li>Uinted States</li>
-    <li>Canada</li>
+    <li>Saint Pierre and Miquelon.    </li>
+    <li>Montserrat</li>
+    <li>Cook Islands</li>
   </ol>
   <img src="bear.jpg" alt="Bear" width="500" height="333">
 </body>  
